--- a/Learnify/src/cssmodule/comment.module.css
+++ b/Learnify/src/cssmodule/comment.module.css
@@ -1,10 +1,9 @@
 .childcomment{
     width: 84%;
-    margin-left: 10%;
+    padding-left: 20px !important;
+    /* margin: 0 !important; */
+
 }
 .comment-container{
     width: 100%;
-}
-.add{
-    margin: 0 !important;
 }
